--- a/src/calculator.css
+++ b/src/calculator.css
@@ -1,54 +1,55 @@
 .calculator {
-    margin: auto;
-    width: 300px;
-    height: 400px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #ffffff;
-    border: 1px solid #cccccc;
-  }
-  .display {
-    width: 94%;
-    height: 10%;
-    padding: 10px;
-    font-size: 20px;
-    text-align: right;
-    border: none;
-    
-    background-color: #cccccc;
-   
-  }
-  .buttons {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 2px;
-    width: 100%;
-    height: 70%;
-    margin: 10px;
-    padding: 10px;
-    font-size: 20px;
-    text-align: center;
-  }
-  button {
-    background-color: #f0f0f0;
-    color: #000000;
-    font-size: 24px;
-    border: none;
-    box-shadow: 1px 1px 1px #cccccc;
-    cursor: pointer;
-  }
-  button:hover {
-    background-color: #cccccc;
-  }
+  margin: auto;
+  width: 300px;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  border: 1px solid #ccc;
+}
 
+.display {
+  width: 94%;
+  height: 10%;
+  padding: 10px;
+  font-size: 20px;
+  text-align: right;
+  border: none;
+  background-color: #ccc;
+}
 
-  .yellow {
-    background-color: rgb(255, 196, 0);
-    color: #000000;
-  }
+.buttons {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2px;
+  width: 100%;
+  height: 70%;
+  margin: 10px;
+  padding: 10px;
+  font-size: 20px;
+  text-align: center;
+}
 
-  .two-column {
-    grid-column: span 2;
-  }
+button {
+  background-color: #f0f0f0;
+  color: #000;
+  font-size: 24px;
+  border: none;
+  box-shadow: 1px 1px 1px #ccc;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #ccc;
+}
+
+.yellow {
+  background-color: rgb(255, 196, 0);
+  color: #000;
+}
+
+.two-column {
+  grid-column: span 2;
+}
