--- a/src/calculator.css
+++ b/src/calculator.css
@@ -17,7 +17,10 @@
   font-size: 20px;
   text-align: right;
   border: none;
-  background-color: #ccc;
+  background-color: #a2a0a0;
+  margin-top: -40px;
+  margin-bottom: -20px;
+  color: #fff;
 }
 
 .buttons {
@@ -46,7 +49,7 @@ button:hover {
 }
 
 .yellow {
-  background-color: rgb(255, 196, 0);
+  background-color: rgb(255, 162, 0);
   color: #000;
 }
 
