--- a/src/calculator.css
+++ b/src/calculator.css
@@ -70,7 +70,7 @@ button:hover {
   background-color: #f2f2f2;
   border-radius: 10px;
   padding: 20px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .display {
@@ -84,7 +84,7 @@ button:hover {
   justify-content: flex-end;
   padding: 10px;
   font-size: 36px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
 .buttons {
@@ -97,7 +97,7 @@ button:hover {
   border: none;
   border-radius: 5px;
   background-color: #d9d9d9;
-  color: #333333;
+  color: #333;
   font-size: 24px;
   padding: 10px;
   cursor: pointer;
